--- a/src/app/components/functionality-list/functionality-list.component.html
+++ b/src/app/components/functionality-list/functionality-list.component.html
@@ -18,5 +18,13 @@
   <li *ngFor="let functionality of functionalities">
     {{ functionality.name }} -
     {{ functionality.status }}
+
+    <ul>
+      <li *ngFor="let task of tasks">
+        <ng-container *ngIf="task.functionality?.name === functionality.name">
+          {{ task.name }} - {{ task.description }} - {{ task.status }}
+        </ng-container>
+      </li>
+    </ul>
   </li>
 </ul>
