--- a/src/app/components/functionality-list/functionality-list.component.html
+++ b/src/app/components/functionality-list/functionality-list.component.html
@@ -1,30 +1,67 @@
 <h2>Lista Funkcjonalności</h2>
 
-<form (submit)="addFunctionality()">
-  <div>
-    <label for="name">Nazwa:</label>
-    <input
-      type="text"
-      name="name"
-      [(ngModel)]="newFunctionality.name"
-      required
-    />
+<form class="mat-elevation-z4" (submit)="addFunctionality()">
+  <div class="form-field">
+    <mat-form-field appearance="fill">
+      <mat-label>Nazwa</mat-label>
+      <input
+        matInput
+        type="text"
+        name="name"
+        [(ngModel)]="newFunctionality.name"
+        required
+      />
+    </mat-form-field>
   </div>
 
-  <button type="submit">Dodaj Funkcjonalność</button>
+  <button mat-raised-button color="primary" type="submit">
+    Dodaj Funkcjonalność
+  </button>
 </form>
 
-<ul>
-  <li *ngFor="let functionality of functionalities">
-    {{ functionality.name }} -
-    {{ functionality.status }}
-
-    <ul>
-      <li *ngFor="let task of tasks">
-        <ng-container *ngIf="task.functionality?.name === functionality.name">
-          {{ task.name }} - {{ task.description }} - {{ task.status }}
+<ul class="mat-list">
+  Projekt 1
+  <li class="mat-list-item" *ngFor="let functionality of functionalities">
+    <div class="mat-list-text">
+      <h3>{{ functionality.name }}</h3>
+      <p>Status: {{ functionality.status }}</p>
+    </div>
+    <button mat-icon-button (click)="startEditing(functionality)">
+      <mat-icon>edit</mat-icon>
+    </button>
+    <button mat-icon-button (click)="deleteFunctionality(functionality)">
+      <mat-icon>delete</mat-icon>
+    </button>
+    <ul class="mat-list">
+      <li class="mat-list-item" *ngFor="let task of tasks">
+        <ng-container *ngIf="task.functionality?.id === functionality.id">
+          Zadania:
+          <div class="mat-list-text">
+            <p>{{ task.name }}</p>
+            <p>{{ task.description }}</p>
+            <p>Status: {{ task.status }}</p>
+          </div>
         </ng-container>
       </li>
     </ul>
+    <ng-container *ngIf="editedFunctionality === functionality">
+      <form class="mat-elevation-z4" (ngSubmit)="saveEditedFunctionality()">
+        <div class="form-field">
+          <mat-form-field appearance="fill">
+            <mat-label>Nowa Nazwa</mat-label>
+            <input
+              matInput
+              type="text"
+              name="editName"
+              [(ngModel)]="editedFunctionality.name"
+              required
+            />
+          </mat-form-field>
+        </div>
+        <button mat-raised-button color="primary" type="submit">
+          Zapisz Zmiany
+        </button>
+      </form>
+    </ng-container>
   </li>
 </ul>
